--- a/ros2_ws/src/bt/package.xml
+++ b/ros2_ws/src/bt/package.xml
@@ -13,6 +13,7 @@
   <depend>std_msgs</depend>
 
   <depend>manip</depend>
+  <depend>path_following</depend>
   
   <depend>rosidl_default_generators</depend>
   <depend>behaviortree_cpp</depend>
