--- a/ros2_ws/src/bt/CMakeLists.txt
+++ b/ros2_ws/src/bt/CMakeLists.txt
@@ -11,6 +11,7 @@ ament_auto_find_build_dependencies()  # packageから自動でfind_packageして
 
 install(DIRECTORY
   config
+  launch
   DESTINATION share/${PROJECT_NAME}/
 )
 
